--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">gerencia_sala_ufms</string>
+    <string name="entrar">Entrar</string>
+    <string name="login">Login</string>
+    <string name="cadastrar">Cadastrar</string>
 </resources>
