feat: added homepage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,7 @@
 <resources>
-    <string name="app_name">Lista de Médicos</string>
+    <string name="app_name">Gerencia Sala UFMS</string>
     <string name="home"> Página Inicial</string>
-    <string name="doctors_page_title">Médicos</string>
-    <string name="specialities_page_title">Especialidades</string>
-    <string name="app_description">Aplicativo para gestão dos médicos da Fedmed</string>
+    <string name="app_description">Aplicativo para gestão de salas da UFMS</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
